# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yaml
migrations/: 20240303190348_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
